tests/errors/errordomain.vala
errordomain Foo {
	BAD;
}

void main () {
}
